--- a/estilos/style.css
+++ b/estilos/style.css
@@ -48,7 +48,8 @@ section#redes-sociais{
 }
 section#redes-sociais  img{
     width: 50px;
-    margin: 10px; 
+    margin: 10px;
+    margin-left: 50px; 
     border-radius: 50%;
     box-shadow: 2px 2px 7px black;
     box-sizing: border-box;
